Update package versions in composer.json
Switched "splash/phpcore" and "splash/console" to stable "^2.0" versions in composer.json. Upgraded "badpixxel/php-sdk" to "^2.0" for consistency and compatibility. These changes enhance stability and align with latest package requirements.

--- a/composer.json
+++ b/composer.json
@@ -42,12 +42,12 @@
 
     "require": {
         "php":                              "^7.4|^8.0",
-        "splash/phpcore":                   "dev-master"
+        "splash/phpcore":                   "^2.0"
     },
     
     "require-dev": {
-        "splash/console":                   "dev-master",
-        "badpixxel/php-sdk":                "~2.0"
+        "splash/console":                   "^2.0",
+        "badpixxel/php-sdk":                "^2.0"
     },
 
     "archive": {
