Add configuration for Dolibarr V21 to splash.yaml
This update introduces a new configuration block for Dolibarr V21, including necessary keys and paths for SOAP integration. It ensures compatibility and support for the V21 instance in the toolkit.

--- a/docker/toolkit/splash.yaml
+++ b/docker/toolkit/splash.yaml
@@ -35,6 +35,21 @@ splash:
                 WsPath:             /custom/splash/vendor/splash/phpcore/soap.php
 
         ########################################################################
+        # Dolibarr V21
+        dol-21:
+            id:                 ThisIsDol21Key
+            key:                ThisTokenIsNotSoSecretChangeIt
+            name:               Dolibarr 21
+            host:               false
+            connector:          soap
+            config:
+                Extended:           true
+                WsIdentifier:       ThisIsDol21Key
+                WsEncryptionKey:    ThisTokenIsNotSoSecretChangeIt
+                WsHost:             http://v21.dolibarr.local
+                WsPath:             /custom/splash/vendor/splash/phpcore/soap.php
+
+        ########################################################################
         # Dolibarr V20
         dol-20:
             id:                 ThisIsDol20Key
