Fix parameter handling in GrumPHP config and ExtraFields trait
Updated PHPStan rules to address a parameter type issue for Dolibarr before V21. Adjusted the ExtraFields trait to pass the "255" value as a string instead of an integer.

--- a/grumphp/phpstan.neon
+++ b/grumphp/phpstan.neon
@@ -43,3 +43,6 @@ parameters:
 
         # Fix for Dolibarr V19
         - '#Method Commande::load_board\(\) invoked with 2 parameters, 1 required#'
+
+        # Fix for Dolibarr before V21
+        - '#Parameter \#4 \$length of method ExtraFields::update\(\) expects int, string given.#'
