Update Splash module to version 2.21.0
Bumped Splash module version from 2.20.3 to 2.21.0 in configuration files. Added new functional test mappings for Dolibarr V21 in the CI pipeline. Adjusted CI setup to ensure compatibility with updated module version.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -115,19 +115,31 @@ stages:
 ################################################################
 
 ################################################################
+# Dolibarr V21
+Dol-21-Basics:
+    image:          dolibarr/dolibarr:21
+    <<: *functionnal-basic
+    allow_failure: true
+Dol-21-Advanced:
+    image:          dolibarr/dolibarr:21
+    <<: *functionnal-advanced
+    allow_failure: true
+Dol-21-Variants:
+    image:          dolibarr/dolibarr:21
+    <<: *functionnal-variants
+    allow_failure: true
+
+################################################################
 # Dolibarr V20
 Dol-20-Basics:
     image:          dolibarr/dolibarr:20
     <<: *functionnal-basic
-    allow_failure: true
 Dol-20-Advanced:
     image:          dolibarr/dolibarr:20
     <<: *functionnal-advanced
-    allow_failure: true
 Dol-20-Variants:
     image:          dolibarr/dolibarr:20
     <<: *functionnal-variants
-    allow_failure: true
 
 ################################################################
 # Dolibarr V19
