--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,16 @@
 ################################################################################
 #
 #  This file is part of SplashSync Project.
-# 
+#
 #  Copyright (C) Splash Sync <www.splashsync.com>
-# 
+#
 #  This program is distributed in the hope that it will be useful,
 #  but WITHOUT ANY WARRANTY; without even the implied warranty of
 #  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-# 
+#
 #  For the full copyright and license information, please view the LICENSE
 #  file that was distributed with this source code.
-# 
+#
 #  @author Bernard Paquier <contact@splashsync.com>
 #
 ################################################################################
@@ -23,7 +23,7 @@
 # for Splash Modules on Prestashop
 #
 # To us different PS Version configured, you need to add hosts to /etc/hosts
-# 
+#
 # 172.100.0.13        v13.dolibarr.local
 # 172.100.0.14        v14.dolibarr.local
 # 172.100.0.15        v15.dolibarr.local
@@ -41,327 +41,25 @@
 #
 ################################################################################
 
-services:
+name: "php-splash-dolibarr-dev"
 
-    ################################################################################
-    # MySQL Container
-    mysql:
-        image: mysql:5.7
-        container_name: db.dolibarr.local
-        logging: { driver: "none" }
-        environment:
-            - "MYSQL_ROOT_PASSWORD=dolibarr"
-            - "MYSQL_DATABASE=dolibarr"
-            - "MYSQL_USER=dolibarr"
-            - "MYSQL_PASSWORD=dolibarr"
-        networks:
-            dolibarr:      { ipv4_address: 172.100.0.101, aliases: [ db.dolibarr.local ] }
-            splashsync:    { aliases: [ db.dolibarr.local ] }
-
-    ################################################################################
-    # Dolibarr Latest (Develop)
-    dolibarr:
-        image: tuxgasy/dolibarr:develop
-        container_name: latest.dolibarr.local
-        depends_on:
-            - mysql
-        working_dir:    /var/www/html/custom
-        environment:
-            - DOLI_DB_TYPE=mysqli
-            - DOLI_DB_HOST=mysql
-            - DOLI_DB_NAME=dolibarr
-            - DOLI_DB_USER=root
-            - DOLI_DB_PASSWORD=dolibarr
-            - DOLI_ADMIN_LOGIN=Admin
-            - DOLI_URL_ROOT=http://latest.dolibarr.local
-            - PHP_MEMORY_LIMIT=-1
-            - SPLASH_WS_ID=ThisIsDolLatestKey
-            - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
-            - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
-        volumes:
-            - "./:/var/www/html/custom/"
-            - "./.git/:/var/www/html/custom/.git/"
-#            - "./docker/overrides:/var/overrides/"
-        entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
-        hostname: latest.dolibarr.local
-        networks:
-            dolibarr:      { ipv4_address: 172.100.0.99 }
-            splashsync:    { aliases: [ latest.dolibarr.local ] }
-
-    ################################################################################
-    # Dolibarr V22
-    dol-22:
-        image:              dolibarr/dolibarr:22
-        container_name:     v22.dolibarr.local
-        depends_on:
-            - mysql
-        links:
-            - mysql
-        working_dir:        /var/www/html/custom
-        environment:
-            - "DOLI_DB_TYPE=mysqli"
-            - "DOLI_DB_HOST=mysql"
-            - "DOLI_DB_NAME=dolibarr22"
-            - "DOLI_DB_USER=root"
-            - "DOLI_DB_PASSWORD=dolibarr"
-            - "DOLI_ADMIN_LOGIN=Admin"
-            - "PHP_MEMORY_LIMIT=-1"
-            - SPLASH_WS_ID=ThisIsDol22Key
-            - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
-            - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
-        volumes:
-            - "./:/var/www/html/custom/"
-            - "./.git/:/var/www/html/custom/.git/"
-        entrypoint:         sh /var/www/html/custom/docker/docker-entrypoint.sh
-        hostname:           v22.dolibarr.local
-        networks:
-            dolibarr:       { ipv4_address: 172.100.0.22 }
-            splashsync:     { aliases: [ v22.dolibarr.local ] }
-
-    ################################################################################
-    # Dolibarr V21
-    dol-21:
-        image:              dolibarr/dolibarr:21
-        container_name:     v21.dolibarr.local
-        depends_on:
-            - mysql
-        links:
-            - mysql
-        working_dir:        /var/www/html/custom
-        environment:
-            - "DOLI_DB_TYPE=mysqli"
-            - "DOLI_DB_HOST=mysql"
-            - "DOLI_DB_NAME=dolibarr21"
-            - "DOLI_DB_USER=root"
-            - "DOLI_DB_PASSWORD=dolibarr"
-            - "DOLI_ADMIN_LOGIN=Admin"
-            - "PHP_MEMORY_LIMIT=-1"
-            - SPLASH_WS_ID=ThisIsDol21Key
-            - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
-            - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
-        volumes:
-            - "./:/var/www/html/custom/"
-            - "./.git/:/var/www/html/custom/.git/"
-        entrypoint:         sh /var/www/html/custom/docker/docker-entrypoint.sh
-        hostname:           v21.dolibarr.local
-        networks:
-            dolibarr:       { ipv4_address: 172.100.0.21 }
-            splashsync:     { aliases: [ v21.dolibarr.local ] }
-
-    ################################################################################
-    # Dolibarr V20
-    dol-20:
-        image: dolibarr/dolibarr:20
-        container_name: v20.dolibarr.local
-        depends_on:
-            - mysql
-        links:
-            - mysql
-        working_dir:    /var/www/html/custom
-        environment:
-            - "DOLI_DB_TYPE=mysqli"
-            - "DOLI_DB_HOST=mysql"
-            - "DOLI_DB_NAME=dolibarr20"
-            - "DOLI_DB_USER=root"
-            - "DOLI_DB_PASSWORD=dolibarr"
-            - "DOLI_ADMIN_LOGIN=Admin"
-            - "PHP_MEMORY_LIMIT=-1"
-            - SPLASH_WS_ID=ThisIsDol20Key
-            - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
-            - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
-        volumes:
-            - "./:/var/www/html/custom/"
-            - "./.git/:/var/www/html/custom/.git/"
-        entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
-        hostname: v20.dolibarr.local
-        networks:
-            dolibarr:      { ipv4_address: 172.100.0.20 }
-            splashsync:    { aliases: [ v20.dolibarr.local ] }
-
-    ################################################################################
-    # Dolibarr V19
-    dol-19:
-        image: dolibarr/dolibarr:19
-        container_name: v19.dolibarr.local
-        depends_on:
-            - mysql
-        links:
-            - mysql
-        working_dir:    /var/www/html/custom
-        environment:
-            - "DOLI_DB_TYPE=mysqli"
-            - "DOLI_DB_HOST=mysql"
-            - "DOLI_DB_NAME=dolibarr19"
-            - "DOLI_DB_USER=root"
-            - "DOLI_DB_PASSWORD=dolibarr"
-            - "DOLI_ADMIN_LOGIN=Admin"
-            - "PHP_MEMORY_LIMIT=-1"
-            - SPLASH_WS_ID=ThisIsDol19Key
-            - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
-            - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
-        volumes:
-            - "./:/var/www/html/custom/"
-            - "./.git/:/var/www/html/custom/.git/"
-        entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
-        hostname: v19.dolibarr.local
-        networks:
-            dolibarr:      { ipv4_address: 172.100.0.19 }
-            splashsync:    { aliases: [ v19.dolibarr.local ] }
-
-    ################################################################################
-    # Dolibarr V18
-    dol-18:
-        image: dolibarr/dolibarr:18
-        container_name: v18.dolibarr.local
-        depends_on:
-            - mysql
-        links:
-            - mysql
-        working_dir:    /var/www/html/custom
-        environment:
-            - "DOLI_DB_TYPE=mysqli"
-            - "DOLI_DB_HOST=mysql"
-            - "DOLI_DB_NAME=dolibarr18"
-            - "DOLI_DB_USER=root"
-            - "DOLI_DB_PASSWORD=dolibarr"
-            - "DOLI_ADMIN_LOGIN=Admin"
-            - "PHP_MEMORY_LIMIT=-1"
-            - SPLASH_WS_ID=ThisIsDol18Key
-            - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
-            - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
-        volumes:
-            - "./:/var/www/html/custom/"
-            - "./.git/:/var/www/html/custom/.git/"
-        entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
-        hostname: v18.dolibarr.local
-        networks:
-            dolibarr:      { ipv4_address: 172.100.0.18 }
-            splashsync:    { aliases: [ v18.dolibarr.local ] }
-
-    ################################################################################
-    # Dolibarr V17
-    dol-17:
-        image: dolibarr/dolibarr:17
-        container_name: v17.dolibarr.local
-        depends_on:
-            - mysql
-        links:
-            - mysql
-        working_dir:    /var/www/html/custom
-        environment:
-            - "DOLI_DB_TYPE=mysqli"
-            - "DOLI_DB_HOST=mysql"
-            - "DOLI_DB_NAME=dolibarr17"
-            - "DOLI_DB_USER=root"
-            - "DOLI_DB_PASSWORD=dolibarr"
-            - "DOLI_ADMIN_LOGIN=Admin"
-            - "PHP_MEMORY_LIMIT=-1"
-            - SPLASH_WS_ID=ThisIsDol17Key
-            - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
-            - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
-        volumes:
-            - "./:/var/www/html/custom/"
-            - "./.git/:/var/www/html/custom/.git/"
-        entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
-        hostname: v17.dolibarr.local
-        networks:
-            dolibarr:      { ipv4_address: 172.100.0.17 }
-            splashsync:    { aliases: [ v17.dolibarr.local ] }
-
-    ################################################################################
-    # Dolibarr V16
-    dol-16:
-        image: dolibarr/dolibarr:16
-        container_name: v16.dolibarr.local
-        depends_on:
-            - mysql
-        links:
-            - mysql
-        working_dir:    /var/www/html/custom
-        environment:
-            - "DOLI_DB_TYPE=mysqli"
-            - "DOLI_DB_HOST=mysql"
-            - "DOLI_DB_NAME=dolibarr16"
-            - "DOLI_DB_USER=root"
-            - "DOLI_DB_PASSWORD=dolibarr"
-            - "DOLI_ADMIN_LOGIN=Admin"
-            - "PHP_MEMORY_LIMIT=-1"
-            - SPLASH_WS_ID=ThisIsDol16Key
-            - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
-            - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
-        volumes:
-            - "./:/var/www/html/custom/"
-            - "./.git/:/var/www/html/custom/.git/"
-        entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
-        hostname: v16.dolibarr.local
-        networks:
-            dolibarr:      { ipv4_address: 172.100.0.16 }
-            splashsync:    { aliases: [ v16.dolibarr.local ] }
-
-
-    ################################################################################
-    # Dolibarr V15
-    dol-15:
-        image: dolibarr/dolibarr:15
-        container_name: v15.dolibarr.local
-        depends_on:
-            - mysql
-        links:
-            - mysql
-        environment:
-            - "DOLI_DB_TYPE=mysqli"
-            - "DOLI_DB_HOST=mysql"
-            - "DOLI_DB_NAME=dolibarr15"
-            - "DOLI_DB_USER=root"
-            - "DOLI_DB_PASSWORD=dolibarr"
-            - "DOLI_ADMIN_LOGIN=Admin"
-            - "PHP_MEMORY_LIMIT=-1"
-            - SPLASH_WS_ID=ThisIsDol15Key
-            - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
-            - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
-        volumes:
-            - "./:/var/www/html/custom/"
-            - "./.git/:/var/www/html/custom/.git/"
-        entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
-        hostname: v15.dolibarr.local
-        networks:
-            dolibarr:      { ipv4_address: 172.100.0.15 }
-            splashsync:    { aliases: [ v15.dolibarr.local ] }
-
-    ################################################################################
-    # Splash Toolkit Container   
-    toolkit:
-        image: 'splashsync/toolkit:alpine'
-        container_name: toolkit.dolibarr.local
-        logging: { driver: "none" }
-        volumes:
-            # Specify Local Configuration File
-            - './docker/toolkit/splash.yaml:/app/config/packages/splash.yaml:ro'
-        hostname:           toolkit.dolibarr.local
-        networks:
-            dolibarr:      { ipv4_address: 172.100.0.100, aliases: [ toolkit.dolibarr.local ] }
-            splashsync:    { aliases: [ toolkit.dolibarr.local ] }
-
-    ################################################################################
-    # PhpMyAdmin Container
-    phpmyadmin:
-        image: phpmyadmin/phpmyadmin:5
-        container_name: phpmyadmin.dolibarr.local
-        logging: { driver: "none" }
-        depends_on:
-            - mysql
-        environment:
-            - PMA_HOST=mysql
-            - MYSQL_USER=dolibarr
-            - MYSQL_ROOT_PASSWORD=dolibarr
-            - MYSQL_PASSWORD=dolibarr
-        networks:
-            dolibarr:      { ipv4_address: 172.100.0.200, aliases: [ phpmyadmin.dolibarr.local ] }
+include:
+    - docker/mysql.compose.yaml
+    - docker/toolkit.compose.yaml
+    - docker/dolibarr.compose.yaml
+    - docker/dol-22.compose.yaml
+    - docker/dol-21.compose.yaml
+    - docker/dol-20.compose.yaml
+    - docker/dol-19.compose.yaml
+    - docker/dol-18.compose.yaml
+    - docker/dol-17.compose.yaml
+    - docker/dol-16.compose.yaml
+    - docker/dol-15.compose.yaml
 
 networks:
     ################################################################################
     # Default Private Network
-    dolibarr:
+    default:
         driver: bridge
         ipam:
             config:
@@ -369,4 +67,4 @@ networks:
     ################################################################################
     # External Splash Network
     splashsync:
-        external: true  
+        external: true
